crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaLoraPlan PamojaLoraPlan;
typedef struct PamojaLorawanDevice PamojaLorawanDevice;
typedef struct PamojaLorawanEndDevice PamojaLorawanEndDevice;
typedef struct PamojaLorawanSession PamojaLorawanSession;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  uint32_t lowest_hz;
  uint32_t highest_hz;
  uint32_t seed;
  uint8_t version;
  uint8_t adr;
  int8_t min_output_dbm;
  int8_t max_output_dbm;
  int8_t antenna_gain_db;
  uint8_t regional_duty_cycle;
  uint8_t behind_repeater;
} PamojaLorawanDeviceSettings;
typedef struct {
  uint64_t until_us;
  uint32_t max;
  uint8_t kind;
  uint8_t data_rate;
  uint8_t state;
  uint8_t format;
} PamojaLorawanDeviceError;
typedef struct {
  uint32_t delay_us;
  uint32_t frequency_hz;
  PamojaLoraLink link;
  uint8_t data_rate;
} PamojaLorawanWindow;
typedef struct {
  uint64_t wake_up_start_us;
  uint64_t wake_up_airtime_us;
  uint64_t ack_start_us;
  uint64_t ack_airtime_us;
  uint64_t uplink_start_us;
  uint8_t wake_up_frame[15];
  uint8_t wake_up_len;
  uint32_t wake_up_frequency_hz;
  uint8_t wake_up_data_rate;
  PamojaLoraLink wake_up_link;
  int8_t wake_up_output_dbm;
  uint8_t has_ack;
  uint32_t ack_frequency_hz;
  uint8_t ack_data_rate;
  PamojaLoraLink ack_link;
  PamojaLorawanWindow rxr;
} PamojaLorawanRelayExchange;
typedef struct {
  uint64_t airtime_us;
  uint32_t frequency_hz;
  PamojaLorawanWindow rx1;
  PamojaLorawanWindow rx2;
  PamojaLoraLink link;
  uint8_t data_rate;
  int8_t output_dbm;
  uint8_t carries_payload;
  uint8_t has_relay;
  PamojaLorawanRelayExchange relay;
} PamojaLorawanTransmission;
typedef struct {
  uint32_t dev_addr;
  uint32_t gps_seconds;
  uint8_t kind;
  uint8_t has_port;
  uint8_t port;
  uint8_t acknowledged;
  uint8_t confirmed;
  uint8_t more_pending;
  uint8_t has_link_check;
  uint8_t margin_db;
  uint8_t gateways;
  uint8_t has_device_time;
  uint8_t fraction;
} PamojaLorawanHeard;
typedef struct {
  uint64_t not_before_us;
  uint8_t kind;
} PamojaLorawanNext;
typedef struct {
  uint32_t dev_addr;
  uint32_t fcnt_up;
  uint32_t fcnt_down;
  uint32_t rx2_frequency_hz;
  uint32_t receive_delay_us;
  uint32_t lowest_hz;
  uint32_t highest_hz;
  uint16_t channel_count;
  uint8_t joined;
  uint8_t data_rate;
  uint8_t has_fcnt_down;
  uint8_t transmissions;
  uint8_t rx2_data_rate;
} PamojaLorawanEndDeviceStatus;
typedef struct {
  uint32_t uplink_hz;
  uint32_t downlink_hz;
  uint8_t min_data_rate;
  uint8_t max_data_rate;
} PamojaLorawanChannel;
PamojaStatus pamoja_lorawan_device_settings(int8_t min_output_dbm,
                                            int8_t max_output_dbm,
                                            PamojaLorawanDeviceSettings *out_settings);
PamojaStatus pamoja_lorawan_end_device_new(const PamojaLoraPlan *plan,
                                           const PamojaLorawanDevice *credentials,
                                           const PamojaLorawanDeviceSettings *settings,
                                           uint32_t fcnt_up,
                                           uint8_t has_fcnt_down,
                                           uint32_t fcnt_down,
                                           PamojaLorawanEndDevice **out_device);
PamojaStatus pamoja_lorawan_end_device_personalized(const PamojaLoraPlan *plan,
                                                    const PamojaLorawanSession *session,
                                                    const PamojaLorawanDeviceSettings *settings,
                                                    uint32_t fcnt_up,
                                                    uint8_t has_fcnt_down,
                                                    uint32_t fcnt_down,
                                                    PamojaLorawanEndDevice **out_device);
void pamoja_lorawan_end_device_free(PamojaLorawanEndDevice *device);
PamojaStatus pamoja_lorawan_end_device_error(const PamojaLorawanEndDevice *device,
                                             PamojaLorawanDeviceError *out_error);
PamojaStatus pamoja_lorawan_end_device_join(PamojaLorawanEndDevice *device,
                                            uint16_t dev_nonce,
                                            uint64_t now_us,
                                            PamojaBuffer **out_frame,
                                            PamojaLorawanTransmission *out_transmission);
PamojaStatus pamoja_lorawan_end_device_send(PamojaLorawanEndDevice *device,
                                            uint8_t port,
                                            const uint8_t *payload,
                                            uintptr_t payload_len,
                                            uint8_t confirmed,
                                            uint64_t now_us,
                                            PamojaBuffer **out_frame,
                                            PamojaLorawanTransmission *out_transmission);
PamojaStatus pamoja_lorawan_end_device_send_empty(PamojaLorawanEndDevice *device,
                                                  uint64_t now_us,
                                                  PamojaBuffer **out_frame,
                                                  PamojaLorawanTransmission *out_transmission);
PamojaStatus pamoja_lorawan_end_device_repeat(PamojaLorawanEndDevice *device,
                                              uint64_t now_us,
                                              PamojaBuffer **out_frame,
                                              PamojaLorawanTransmission *out_transmission);
PamojaStatus pamoja_lorawan_end_device_heard(PamojaLorawanEndDevice *device,
                                             const uint8_t *frame,
                                             uintptr_t frame_len,
                                             int8_t snr_db,
                                             PamojaLorawanHeard *out_heard,
                                             PamojaBuffer **out_payload);
PamojaStatus pamoja_lorawan_end_device_nothing_heard(PamojaLorawanEndDevice *device,
                                                     uint64_t now_us,
                                                     PamojaLorawanNext *out_next);
PamojaStatus pamoja_lorawan_end_device_set_battery(PamojaLorawanEndDevice *device,
                                                   uint8_t kind,
                                                   uint8_t level);
PamojaStatus pamoja_lorawan_end_device_request_link_check(PamojaLorawanEndDevice *device);
PamojaStatus pamoja_lorawan_end_device_request_device_time(PamojaLorawanEndDevice *device);
PamojaStatus pamoja_lorawan_end_device_status(const PamojaLorawanEndDevice *device,
                                              PamojaLorawanEndDeviceStatus *out_status);
PamojaStatus pamoja_lorawan_end_device_channel(const PamojaLorawanEndDevice *device,
                                               uint16_t position,
                                               uint16_t *out_index,
                                               PamojaLorawanChannel *out_channel);
PamojaStatus pamoja_lorawan_end_device_save(PamojaLorawanEndDevice *device,
                                            uint64_t now_us,
                                            uint8_t *out_saved,
                                            uintptr_t len);
PamojaStatus pamoja_lorawan_end_device_resume(PamojaLorawanEndDevice *device,
                                              const uint8_t *saved,
                                              uintptr_t saved_len,
                                              uint64_t now_us);